# pdf-knife

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  util.rs
src/cmd/: analyze.rs  annots.rs  content.rs  document.rs  mod.rs  obj_view.rs  page.rs  resources.rs  text.rs  watermark.rs
