[package]
name = "pdf-knife"
version = "0.1.0"
edition = "2024"
description = "PDF 命令行工具：内容流编辑 / 水印去除 / 页面操作 / 结构分析"

[[bin]]
name = "pdf-knife"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
lopdf = "0.39.0"
encoding_rs = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
